--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -36,6 +36,9 @@ de:
         slug: Slug
         target_page_id: Weiterleiten zu Seite
         is_published: Veröffentlicht
+        teaser_image: Teaserbild
+        header_image: Headerbild
+        subtitle: Subtitel
       cms/file:
         file: Datei
         description: Beschreibung
