styles for image chooser modal and stylesheet inclusion (needs to be parametrized better per site!!)

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -57,6 +57,7 @@ de:
         label: Name
         description: Beschreibung
         presets: Einstellungen
+        parent_id: Übergeordneter Ordner
 
   # -- Controllers ----------------------------------------------------------
   cms:
