Partial for subpage teasers

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -128,6 +128,10 @@ de:
       not_found: Ordner nicht gefunden
 
   # -- Views ----------------------------------------------------------------
+  cms:
+    content:
+      more: Mehr
+
   admin:
     cms:
       base:
