--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -49,6 +49,7 @@ de:
         right_column: Rechte Spalte
         navigation_root_id: In Navigationsbaum ab
         render_as_page: Eigenständige Seite
+        is_leaf_node: Letzte Navigationsebene
       cms/file:
         file: Datei
         description: Beschreibung
@@ -192,9 +193,11 @@ de:
           are_you_sure: Sind Sie sicher?
         new:
           title: Neue Seite
+          create_subpage: Unterseite erstellen
         edit:
           title: Seite bearbeiten
           revision: Revision
+          create_subpage: Unterseite erstellen
         form:
           select_target_page: Keine Weiterleitung
           preview: Vorschau
@@ -202,6 +205,8 @@ de:
           update: Seite speichern
           is_published: Veröffentlicht
           render_as_page: Eigenständige Seite
+          is_leaf_node: Letzte Navigationsebene
+          create_subpage: Unterseite erstellen
         form_blocks:
           no_tags: |-
             Layout has hat keine Inhalt-Tags definiert.<br/>
