--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -133,6 +133,37 @@ de:
     content:
       more: Mehr
 
+    contact_form:
+      submit: Absenden
+      continue: Weiter
+      cancel: Abbrechen
+      title:
+        information: Anfrage
+        contact: Kontaktformular
+        participant: Teilnahmeformular
+        booking: Buchung
+      fields:
+        first_name: Vorname
+        last_name: Nachname
+        email: E-Mail Adresse
+        phone: Tel.-Nr.
+        more_phone_numbers: Weitere Telefonnr.
+        address: Adresse
+        postcode: Postleitzahl
+        city: Stadt
+        country: Land
+        gender: Geschlecht
+        date_of_birth: Geburtsdatum
+        nationality: Staatsangehörigkeit
+        passport_number: Passnummer
+        institution: Firma o. Organisation
+        institution1: Schule, Universität, Organisation oder Firma, der Sie zur Zeit angehören
+        program_choice: Programmwahl
+        program_begin: Gewünschter Programmbeginn
+        program_length: Gewünschte Programmdauer
+        questions_and_comments: Fragen/Anmerkungen
+
+
   admin:
     cms:
       base:
