--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -153,6 +153,19 @@ en:
         program_begin: Preferred Program Commencement
         program_length: Preferred Program Duration
         questions_and_comments: Questions/Comments
+      gender:
+        male: male
+        female: female
+      program_choice:
+        beginners_course: Spanish Beginners
+        intermediate_course: Spanish Intermediate
+        advanced_course: Spanish Advanced
+        professional_course: Spanish Professional
+        professors_course: Spanish Professors
+        travel_course1: Alejuela & M. Antonio
+        voluntary_work: Voluntary Work
+        work_experience: Work Experience
+        highschool: Highschool
 
 
   admin:
