--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -139,9 +139,9 @@ de:
       cancel: Abbrechen
       required_hint: '%{symbol} markiert erforderliche Felder'
       title:
-        information: Ihre Anfrage
+        information: informationen anfordern
         contact: Kontaktformular
-        participant: Teilnahmeformular
+        participant: Anmeldung
         booking: Buchung
       fields:
         first_name: Vorname
