updated basic routing & rendering for contacts#create

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -176,6 +176,8 @@ de:
         professional_course: Spanischkurs Profis
         professors_course: Spanischkurs Professoren
         travel_course1: Alejuela & M. Antonio
+        50_plus: Bildungsreisen 50 Plus
+        teenies: Teenies
         voluntary_work: Voluntariat
         work_experience: Praktikum
         highschool: Highschool
