--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -167,6 +167,8 @@ en:
         professional_course: Spanish Professional
         professors_course: Spanish Professors
         travel_course1: Alejuela & M. Antonio
+        50_plus: Travel 50 Plus
+        teenies: Teenies
         voluntary_work: Voluntary Work
         work_experience: Work Experience
         highschool: Highschool
