--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -2,7 +2,20 @@
 
 en:
   devise:
+    labels:
+      sign_in: 'Sign In'
+      email: 'Email'
+      password: 'Password'
+      sign_up: 'Sign up'
+      remember_me: 'Remember me'
+    links:
+      forgot_password: 'Forgot your password?'
+      missing_confirmation: "Didn't receive confirmation instructions?"
+      missing_unlock: "Didn't receive unlock instructions?"
+      provider_sign_in: "Sign in with %{provider}"
     confirmations:
+      title: 'Resend confirmation instructions'
+      submit: 'Resend confirmation instructions'
       confirmed: "Your account was successfully confirmed."
       confirmed_and_signed_in: "Your account was successfully confirmed. You are now signed in."
       send_instructions: "You will receive an email with instructions about how to confirm your account in a few minutes."
@@ -20,14 +33,32 @@ en:
     mailer:
       confirmation_instructions:
         subject: "Confirmation instructions"
+        welcome: "Welcome %{email}!"
+        body: 'You can confirm your account email through the link below:'
+        link_text: 'Confirm my account'
       reset_password_instructions:
         subject: "Reset password instructions"
+        hello: "Hello %{email}!"
+        body: 'Someone has requested a link to change your password. You can do this through the link below.'
+        link_text: 'Change my password'
+        ignore_notice: "If you didn't request this, please ignore this email."
+        change_hint: "Your password won't change until you access the link above and create a new one."
       unlock_instructions:
         subject: "Unlock Instructions"
+        hello: "Hello %{email}!"
+        body: 'Your account has been locked due to an excessive number of unsuccessful sign in attempts.'
+        instructions: 'Click the link below to unlock your account:'
+        link_text: 'Unlock my account'
     omniauth_callbacks:
       failure: "Could not authenticate you from %{kind} because \"%{reason}\"."
       success: "Successfully authenticated from %{kind} account."
     passwords:
+      title_change: 'Change your password'
+      title_forgot: 'Need a new Password'
+      new: 'New Password'
+      confirm: 'Confirm Password'
+      submit_change: 'Change my Password'
+      submit_forgot: 'Send me reset password instructions'
       no_token: "You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided."
       send_instructions: "You will receive an email with instructions about how to reset your password in a few minutes."
       send_paranoid_instructions: "If your email address exists in our database, you will receive a password recovery link at your email address in a few minutes."
@@ -45,6 +76,8 @@ en:
       signed_in: "Signed in successfully."
       signed_out: "Signed out successfully."
     unlocks:
+      title: 'Resend unlock instructions'
+      submit: 'Resend unlock instructions'
       send_instructions: "You will receive an email with instructions about how to unlock your account in a few minutes."
       send_paranoid_instructions: "If your account exists, you will receive an email with instructions about how to unlock it in a few minutes."
       unlocked: "Your account has been unlocked successfully. Please sign in to continue."
