language navigation partial and styles

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,4 +1,5 @@
-en:
+es:
+  language_name: Español
   # -- Models ---------------------------------------------------------------
   attributes:
     label: Label
