--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,4 +1,5 @@
 de:
+  language_name: Deutsch
   # -- Models ---------------------------------------------------------------
   attributes:
     label: Bezeichnung
