--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,5 @@
 en:
+  language_name: English
   # -- Models ---------------------------------------------------------------
   attributes:
     label: Label
