--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -182,8 +182,8 @@ en:
         travel_course1: Alejuela & M. Antonio
         50_plus: Travel 50 Plus
         teenies: Teenies
-        voluntary_work: Voluntary Work
-        work_experience: Work Experience
+        voluntary_work: Volunteering
+        work_experience: Internship
         highschool: Highschool
 
 
